VSCodium/logs/20200817T140312/exthost1/output_logging_20200817T140314/5-Prettier.log
["INFO" - 2:03:14 PM] Extension Name: esbenp.prettier-vscode.
["INFO" - 2:03:14 PM] Extension Version: 5.1.3.
["INFO" - 2:03:14 PM] Loaded module 'prettier@1.19.1' from '/home/neeraj/Work/todd/node_modules/prettier/index.js'
["INFO" - 2:03:14 PM] Enabling prettier for languages
[
  "css",
  "graphql",
  "html",
  "javascript",
  "javascriptreact",
  "json",
  "json5",
  "jsonc",
  "less",
  "markdown",
  "mdx",
  "mongo",
  "postcss",
  "scss",
  "typescript",
  "typescriptreact",
  "vue",
  "yaml"
]
["INFO" - 2:03:14 PM] Enabling prettier for range supported languages
[
  "graphql",
  "javascript",
  "javascriptreact",
  "json",
  "typescript",
  "typescriptreact"
]
["INFO" - 4:37:02 PM] Loaded module 'prettier@1.19.1' from '/home/neeraj/Work/todd/node_modules/prettier/index.js'
["INFO" - 4:37:02 PM] Enabling prettier for languages
[
  "css",
  "graphql",
  "html",
  "javascript",
  "javascriptreact",
  "json",
  "json5",
  "jsonc",
  "less",
  "markdown",
  "mdx",
  "mongo",
  "postcss",
  "scss",
  "typescript",
  "typescriptreact",
  "vue",
  "yaml"
]
["INFO" - 4:37:02 PM] Enabling prettier for range supported languages
[
  "graphql",
  "javascript",
  "javascriptreact",
  "json",
  "typescript",
  "typescriptreact"
]
["INFO" - 7:55:43 PM] Loaded module 'prettier@1.19.1' from '/home/neeraj/Work/todd/node_modules/prettier/index.js'
["INFO" - 7:55:43 PM] Enabling prettier for languages
[
  "css",
  "graphql",
  "html",
  "javascript",
  "javascriptreact",
  "json",
  "json5",
  "jsonc",
  "less",
  "markdown",
  "mdx",
  "mongo",
  "postcss",
  "scss",
  "typescript",
  "typescriptreact",
  "vue",
  "yaml"
]
["INFO" - 7:55:43 PM] Enabling prettier for range supported languages
[
  "graphql",
  "javascript",
  "javascriptreact",
  "json",
  "typescript",
  "typescriptreact"
]
["INFO" - 7:55:44 PM] Loaded module 'prettier@1.19.1' from '/home/neeraj/Work/todd/node_modules/prettier/index.js'
["INFO" - 7:55:44 PM] Enabling prettier for languages
[
  "css",
  "graphql",
  "html",
  "javascript",
  "javascriptreact",
  "json",
  "json5",
  "jsonc",
  "less",
  "markdown",
  "mdx",
  "mongo",
  "postcss",
  "scss",
  "typescript",
  "typescriptreact",
  "vue",
  "yaml"
]
["INFO" - 7:55:44 PM] Enabling prettier for range supported languages
[
  "graphql",
  "javascript",
  "javascriptreact",
  "json",
  "typescript",
  "typescriptreact"
]
["INFO" - 8:17:27 PM] Formatting /home/neeraj/Work/mongo_queries.json
["INFO" - 8:17:27 PM] Using ignore file (if present) at undefined
["INFO" - 8:17:27 PM] Using bundled version of prettier.
["INFO" - 8:17:27 PM] File Info:
{
  "ignored": false,
  "inferredParser": "json"
}
["INFO" - 8:17:27 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, falling back to VS Code configuration
["INFO" - 8:17:27 PM] Prettier Options:
{
  "arrowParens": "always",
  "bracketSpacing": true,
  "endOfLine": "lf",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxBracketSameLine": false,
  "jsxSingleQuote": false,
  "printWidth": 80,
  "proseWrap": "preserve",
  "quoteProps": "as-needed",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "es5",
  "useTabs": false,
  "vueIndentScriptAndStyle": false,
  "filepath": "/home/neeraj/Work/mongo_queries.json",
  "parser": "json",
  "rangeEnd": 10871,
  "rangeStart": 8039
}
["ERROR" - 8:17:27 PM] Error formatting document.
["ERROR" - 8:17:27 PM] Unexpected token (275:1)
  273 |   },
  274 |   {"$limit": 1},
> 275 | ]
      | ^
  276 | 
  277 | 
  278 | 
SyntaxError: Unexpected token (275:1)
  273 |   },
  274 |   {"$limit": 1},
> 275 | ]
      | ^
  276 | 
  277 | 
  278 | 
	at e (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/parser-babel.js:1:344)
	at Object.parse (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/parser-babel.js:1:262513)
	at Object.parse (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:11370:19)
	at formatRange (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:14871:25)
	at format (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:15019:49)
	at formatWithCursor (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:15035:12)
	at /home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:51620:12
	at Object.format (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/node_modules/prettier/index.js:51640:12)
	at t.default.<anonymous> (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/dist/extension.js:1:58387)
	at Generator.next (<anonymous>)
	at s (/home/neeraj/.vscode-oss/extensions/esbenp.prettier-vscode-5.1.3/dist/extension.js:1:53305)
["INFO" - 8:17:27 PM] Formatting completed in 45.245503ms.
